--- a/mod.yml
+++ b/mod.yml
@@ -1,6 +1,6 @@
 title: Surveillance Robot
 originalAuthor: Shananas
-description:
+game: kh2
 assets:
  - name: obj/M_EX770_RAW.mdlx
    method: copy
